# scad-mcp

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
.trae/: mcp.json
.trae/rules/: scad_mcp.md
examples/: ferris_wheel.scad
src/scad_mcp/: __init__.py  logging_setup.py  models.py  server.py  validation.py
src/scad_mcp/config/: __init__.py  loader.py  models.py
src/scad_mcp/openscad/: __init__.py  cli.py  converter.py  installer.py  renderer.py
src/scad_mcp/tools/: __init__.py  installation_checker.py  model_converter.py  model_renderer.py
tests/: test_converter.py  test_installer.py  test_integration.py  test_renderer.py  test_validation.py
